kubernetes/apps/frigate/app/deployment/httproute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: frigate-buffering
  namespace: frigate
spec:
  buffering:
    maxRequestBodyBytes: 0

---


apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-httproute
  namespace: frigate
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: ingress
    sectionName: websecure
  hostnames:
  - "cctv.cloud.fonzdm.xyz"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: frigate-buffering
    backendRefs:
    - name: frigate
      port: 8971

---
